--- a/index.html
+++ b/index.html
@@ -611,13 +611,16 @@
             </ul>
           </div>
           <div class="page-details">
-            <div>Page Last Updated:
+            <div>
+              <span>Page Last Updated:</span>
               <b>Nov 29, 2024</b>
             </div>
-            <div>Page Editor:
+            <div>
+              <span>Page Editor:</span>
               <b>Gary Daines</b>
             </div>
-            <div>Responsible NASA Official:
+            <div>
+              <span>Responsible NASA Official:</span>
               <b>Abigail Bowman</b>
             </div>
           </div>
